

public abstract class Chef {
    public abstract void setNextChef(Chef nextChef);
    public abstract void cook(FoodItem food);
}
