

public enum FoodType {
    SUSHI, BURGER, PASTA, PIZZA, DESSERT, SALAD
}
